--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
 			height: calc(100% - 50px);
 			background-color: #ccc;
 		}
+
+		.item {
+			width: 100%;
+			height: 200px;
+		}
+
+		.item:nth-child(odd) {
+			background-color: aqua;
+		}
+
+		.item:nth-child(even) {
+			background-color: antiquewhite;
+		}
 	</style>
 </head>
 
@@ -42,8 +55,15 @@
 	<div class="wrap">
 		<header>頂部</header>
 		<div class="info">
-			<button onclick="changeBodyH('100%')">body改100%</button>
-			<button onclick="changeBodyH('100vh')">body改100vh</button>
+			<div class="item">
+				<button onclick="changeBodyH('100%')">body改100%</button>
+				<button onclick="changeBodyH('100vh')">body改100vh</button>
+			</div>
+			<div class="item"></div>
+			<div class="item"></div>
+			<div class="item"></div>
+			<div class="item"></div>
+
 		</div>
 	</div>
 
