--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 			height: 100%;
 		}
 
+		html {
+			overflow-x: hidden;
+		}
+
+		body {
+			overflow: hidden;
+		}
+
 		.wrap {
 			width: 100%;
 			height: 100%;
