--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	<title>Document</title>
 	<style>
 		* {
@@ -20,10 +23,6 @@
 
 		html {
 			overflow-x: hidden;
-		}
-
-		body {
-			overflow: hidden;
 		}
 
 		.wrap {
@@ -66,6 +65,7 @@
 			<div class="item">
 				<button onclick="changeBodyH('100%')">body改100%</button>
 				<button onclick="changeBodyH('100vh')">body改100vh</button>
+				<button onclick="changeBodyH('100vh')">body改none</button>
 			</div>
 			<div class="item"></div>
 			<div class="item"></div>
