--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
 	<title>Document</title>
 	<style>
 		* {
@@ -67,7 +65,7 @@
 				<button onclick="changeBodyH('100vh')">body改100vh</button>
 				<button onclick="changeBodyH('100vh')">body改none</button>
 			</div>
-			<div class="item"></div>
+			<div class="item">aaa</div>
 			<div class="item"></div>
 			<div class="item"></div>
 			<div class="item"></div>
@@ -82,6 +80,7 @@
 			bodyH.style.height = str;
 		}
 	</script>
+	<script>window.addEventListener("load", function () { setTimeout('window.scrollTo(0,1);', 1); }, false);</script>
 </body>
 
 </html>
