--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			padding: 0;
 		}
 
-		html,
+		/* html,
 		body {
 			width: 100%;
 			height: 100%;
@@ -21,6 +21,21 @@
 
 		html {
 			overflow-x: hidden;
+		} */
+		* {
+			margin: 0;
+			padding: 0;
+			-webkit-box-sizing: border-box;
+			box-sizing: border-box
+		}
+
+		html {
+			height: 100%;
+			-webkit-overflow-scrolling: touch
+		}
+
+		body {
+			min-height: 100%
 		}
 
 		.wrap {
@@ -64,7 +79,6 @@
 				<button onclick="changeBodyH('100%')">body改100%</button>
 				<button onclick="changeBodyH('100vh')">body改100vh</button>
 				<button onclick="changeBodyH('100vh')">body改none</button>
-				<button onclick="bodyHandler()">bodyHandler</button>
 			</div>
 			<div class="item"></div>
 			<div class="item"></div>
@@ -80,13 +94,6 @@
 			console.log(str);
 			bodyH.style.height = str;
 		}
-		function bodyHandler() {
-			if (document.documentElement.scrollHeight <= document.documentElement.clientHeight) {
-				bodyTag = document.getElementsByTagName('body')[0];
-				bodyTag.style.height = document.documentElement.clientWidth / screen.width * screen.height + 'px';
-			}
-		}
-
 	</script>
 
 </body>
