--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 			height: 100%;
 		}
 
+		html {
+			overflow-x: hidden;
+		}
+
 		.wrap {
 			width: 100%;
 			height: 100%;
@@ -52,7 +56,7 @@
 			background-color: antiquewhite;
 		}
 
-		.bodyScroll {
+		.bodyScroll body {
 			overflow-x: hidden;
 			overflow-y: auto;
 		}
@@ -66,7 +70,7 @@
 
 <body id="body" class="bodyScroll">
 	<div class="wrap">
-		<header>頂部</header>
+		<header>頂部1</header>
 		<div class="info">
 			<div class="item">
 				<div>html Tag狀態: <span id="htmlTag"></span></div>
