--- a/ddd.html
+++ b/ddd.html
@@ -5,18 +5,12 @@
         <meta name="viewport" content="width=device-width">
 
         <title>Trending - CodePen</title>
-        <link rel="stylesheet" href="a.css">
-        <link rel="stylesheet" href="b.css">
-        <!-- <link rel="stylesheet" media="all"
-            href="https://cpwebassets.codepen.io/assets/global/global-287e19e0385dcda82839437227412a58ee4d27c64c582021f54dcac3cc8b2d9c.css">
-
-
-            <link rel="stylesheet" media="all"
-            href="https://cpwebassets.codepen.io/assets/page/page-f140b10b168429b7c38af50f9c4aa86d0f041e8b099ad1cafc119805c7b61ed0.css"> -->
+        <link rel="stylesheet" href="a.css?v=11">
+        <link rel="stylesheet" href="b.css?v=11">
 
     </head>
 
     <body class="  not-team logged-in" data-sidebar-collapsed="false" data-mobile-nav-open="false">
-        <div style="height: 2000px">10</div>
+        <div style="height: 2000px">11</div>
     </body>
 </body>
