--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
 	<link rel="stylesheet" href="index.css">
 	<title>Document</title>
 	<style>
-		/* * {
+		* {
 			margin: 0;
 			padding: 0;
 			-webkit-box-sizing: border-box;
-			box-sizing: border-box
-		}
-
-		html,
-		body {
-			width: 100%;
-			height: 100%;
+			box-sizing: border-box;
 		}
 
 		html {
 			overflow-x: hidden;
-		} */
+		}
+
+		body {
+
+			overflow-x: hidden;
+			overflow-y: auto;
+			height: 100vh;
+		}
 
 		.wrap {
 			width: 100%;
@@ -56,7 +57,7 @@
 			background-color: antiquewhite;
 		}
 
-		.bodyScroll body {
+		/* .bodyScroll body {
 			overflow-x: hidden;
 			overflow-y: auto;
 		}
@@ -64,7 +65,7 @@
 		.insideScroll .info {
 			overflow-x: hidden;
 			overflow-y: auto;
-		}
+		} */
 	</style>
 </head>
 
