--- a/ddd.html
+++ b/ddd.html
@@ -1,9 +1,8 @@
-<body lang="en" class="ios safari15">
+<body lang="en">
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-
         <title>Trending - CodePen</title>
         <style>
             * {
@@ -26,7 +25,7 @@
         </style>
     </head>
 
-    <body class="not-team logged-in" data-sidebar-collapsed="false" data-mobile-nav-open="false">
-        <div style="height: 2000px">30</div>
+    <body>
+        <div style="height: 2000px">31</div>
     </body>
 </body>
