--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			height: 100vh;
 		}
 
-		.wrap {
+		/* .wrap {
 			width: 100%;
 			height: 100%;
 			background-color: #eee;
@@ -55,7 +55,7 @@
 
 		.item:nth-child(even) {
 			background-color: antiquewhite;
-		}
+		} */
 
 		/* .bodyScroll body {
 			overflow-x: hidden;
@@ -69,8 +69,11 @@
 	</style>
 </head>
 
-<body id="body" class="bodyScroll">
-	<div class="wrap">
+<body id="body" class="">
+	<div class="wrap" style="color: #000; height:2000px;">
+999
+	</div>
+	<!-- <div class="wrap">
 		<header>頂部1</header>
 		<div class="info">
 			<div class="item">
@@ -124,7 +127,7 @@
 			htmlTag.innerHTML = htmlH.offsetHeight;
 			bodyTag.innerHTML = bodyH.offsetHeight;
 		}
-	</script>
+	</script> -->
 
 </body>
 
