--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,6 @@
             overflow-x: hidden;
             overflow-y: auto;
             top: 0;
-            right: 0;
             width: 100px;
             height: 100px;
             border: 1px solid #000;
@@ -32,12 +31,13 @@
         }
 
         .a1 {
-
+            left: 0;
             overscroll-behavior: auto;
         }
 
         .a2 {
 
+            right: 0;
             overscroll-behavior: contain;
         }
     </style>
