--- a/index2.html
+++ b/index2.html
@@ -24,10 +24,11 @@
             overflow-x: hidden;
             overflow-y: auto;
             top: 0;
-            width: 100px;
-            height: 100px;
+            width: 150px;
+            height: 150px;
             border: 1px solid #000;
             background: rgba(0, 0, 0, .5);
+            z-index: 1;
         }
 
         .a1 {
