--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,13 @@
             height: 100vh;
         }
 
+        body {
+            overflow: hidden;
+        }
+
         .wrap {
+            overflow-y: auto;
+            overscroll-behavior-y: auto;
             width: 100%;
             height: 100%;
         }
@@ -86,13 +92,32 @@
             bottom: 0;
             overscroll-behavior: none;
         } */
+        .overscrollStyle {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .overscrollStyle li+li {
+            margin-left: 10px;
+        }
     </style>
 </head>
 
 <body>
-    <div id="app" class="wrap">
+    <div id="app" class="wrap" :style="sty">
         <header class="title">
-            {{title}}
+            <span>{{title}}</span>
+
+            <span>
+                現在狀態：{{nowState}}
+            </span>
+
+            <ul class="overscrollStyle">
+                <li @click="changeState('none')">none</li>
+                <li @click="changeState('auto')">auto</li>
+                <li @click="changeState('contain')">contain</li>
+            </ul>
         </header>
         <ul class="ul_content">
             <li v-for="(item,index) in 50">
@@ -111,7 +136,15 @@
             el: '#app',
             data() {
                 return {
-                    title: "aaa"
+                    title: "aaa",
+                    nowState: 'none',
+                    sty: "overscroll-behavior: none;"
+                }
+            },
+            methods: {
+                changeState(str) {
+                    this.nowState = str;
+                    this.sty = 'overscroll-behavior:' + str
                 }
             }
         })
