--- a/index2.html
+++ b/index2.html
@@ -21,12 +21,12 @@
         }
 
         body {
-            overflow: hidden;
+            /* overflow: hidden; */
         }
 
         .wrap {
-            overflow-y: auto;
-            overscroll-behavior-y: auto;
+            /* overflow-y: auto;
+            overscroll-behavior-y: auto; */
             width: 100%;
             height: 100%;
         }
@@ -120,7 +120,7 @@
         </header>
         <ul class="ul_content">
             <li v-for="(item,index) in 50">
-                Email:{{index + 2}}
+                Email:{{index + ３}}
             </li>
         </ul>
         <div class="chah"></div>
