--- a/index2.html
+++ b/index2.html
@@ -101,6 +101,31 @@
         .overscrollStyle li+li {
             margin-left: 10px;
         }
+
+        .chat {
+            position: fixed;
+            bottom: 0;
+            right: 16px;
+            width: 300px;
+            height: 300px;
+            background-color: #fff;
+            border: 1px solid #ccc;
+        }
+
+        .chat_title {
+            display: flex;
+            align-items: center;
+            height: 40px;
+            padding: 0 8px;
+            background: #404040;
+            color: #fff;
+        }
+
+        .chat_body {
+            overflow-x: hidden;
+            overflow-y: auto;
+            height: calc(100% - 40px);
+        }
     </style>
 </head>
 
@@ -123,7 +148,22 @@
                 Email:{{index + 3}}
             </li>
         </ul>
-        <div class="chah"></div>
+        <div class="chat">
+            <div class="chat_title">
+                <ul class="overscrollStyle">
+                    <li @click="changeInState('none')">none</li>
+                    <li @click="changeInState('auto')">auto</li>
+                    <li @click="changeInState('contain')">contain</li>
+                </ul>
+            </div>
+            <div class="chat_body" :style="insty">
+                <li>目前狀態:{{insty}}</li>
+                <li v-for="(item,index) in 50">
+                    
+                    Email Chat:{{index + 3}}
+                </li>
+            </div>
+        </div>
     </div>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.9/vue.min.js'
@@ -137,7 +177,8 @@
                 return {
                     title: "aaa",
                     nowState: 'none',
-                    sty: "overscroll-behavior: none;"
+                    sty: "overscroll-behavior: none;",
+                    insty: "overscroll-behavior: none;"
                 }
             },
             methods: {
@@ -145,8 +186,11 @@
                     this.nowState = str;
                     let bodyStyle = document.getElementById('body');
                     this.sty = 'overscroll-behavior:' + str
-                    bodyStyle.style= this.sty;
-                    
+                    bodyStyle.style = this.sty;
+
+                },
+                changeInState(str) {
+                    this.insty = 'overscroll-behavior:' + str
                 }
             }
         })
