--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,7 @@
         body {
             width: 100%;
             height: 100vh;
+            -webkit-overflow-scrolling: touch;
         }
 
         body {
@@ -110,6 +111,7 @@
             height: 300px;
             background-color: #fff;
             border: 1px solid #ccc;
+            -webkit-overflow-scrolling: touch;
         }
 
         .chat_title {
@@ -162,7 +164,6 @@
             <div class="chat_body" :style="insty">
                 <li>目前狀態:{{insty}}</li>
                 <li v-for="(item,index) in 50">
-                    
                     Email Chat:{{index + 3}}
                 </li>
             </div>
@@ -178,12 +179,19 @@
             el: '#app',
             data() {
                 return {
-                    bodyflow:'',
+                    bodyflowState: '',
                     title: "aaa",
                     nowState: 'none',
                     sty: "overscroll-behavior: none;",
                     insty: "overscroll-behavior: none;"
                 }
+            },
+            mounted() {
+                let bodyStyle = document.getElementById('body');
+                console.log('bodyStyle', bodyStyle);
+
+                console.log('bodyStyle', bodyStyle.style);
+
             },
             methods: {
                 changeState(str) {
